Cleaned up code

--- a/index.html
+++ b/index.html
@@ -2,28 +2,25 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, height=device-height">
 	<title>Tree</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-	<div>
+	<div id="container">
 		<div class="text-holder" id="draw">
-			<div id="draw_">Draw</div>
+			Draw
+		</div>
+		<div class="text-holder" id="line">
+			Line
 		</div>
 		<div class="text-holder" id="text">
-			<div id="text_">Text</div>
-		</div>
-		<div class="text-holder" id="line1">
-			<div id="line1_">Line Start</div>
-		</div>
-		<div class="text-holder" id="line2">
-			<div cid="line2_">Line End</div>
+			Text
 		</div>
 		<div class="text-holder">
 			<input type="text" name="" id="text_value">
 		</div>
-		<canvas id="myCanvas"></canvas>
+		<canvas id="canvas"></canvas>
 	</div>
 	<script type="text/javascript" src="index.js"></script>
 </body>
