Save function working

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<div class="text-holder">
 			<input type="text" name="" id="text_value">
 		</div>
+		<div id="save" class="text-holder">Save</div>
 		<canvas id="canvas"></canvas>
 	</div>
 	<script type="text/javascript" src="index.js"></script>
