--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 		<div class="text-holder">
 			<input type="text" name="" id="text_value">
 		</div>
-		<div id="save" class="text-holder">Save</div>
+		<div id="save" class="text-holder">Save Drawing</div>
+		<div id="load" class="text-holder">Load Drawing</div> : 
+		<div class="text-holder"><input type="file" id="file-input" /></div>
 		<canvas id="canvas"></canvas>
 	</div>
 	<script type="text/javascript" src="index.js"></script>
