Renamed draw to circle in HTML

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div id="container">
 		<div class="text-holder" id="draw">
-			Draw
+			Circle
 		</div>
 		<div class="text-holder" id="line">
 			Line
