--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</div>
 		<div id="save" class="text-holder">Save Drawing</div>
 		<div id="load" class="text-holder">Load Drawing</div> : 
-		<div class="text-holder"><input type="file" id="file-input" /></div>
+		<div class="text-holder" id="file-holder"><input type="file" id="file-input" /></div>
 		<canvas id="canvas"></canvas>
 	</div>
 	<script type="text/javascript" src="index.js"></script>
